--- a/main.html
+++ b/main.html
@@ -10,7 +10,17 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<h1>My Playlist</h1>
+	<div class ="player_one">
+		<ul>
+	<li><b><a href="https://www.youtube.com/watch?v=kd-6aw99DpA" target"_blank">Song1</a></b></li>
+	<li><b><a href=" https://www.youtube.com/watch?v=9iIX4PBplAY" target"_blank">Song2</a></b></li>
+	<li><b><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y" target"_blank">Song3</a></b></li>
+	<li><b><a href="https://www.youtube.com/watch?v=puKD3nkB1h4" target"_blank">Song4</a></b></li>
+	<li><b><a href=" https://www.youtube.com/watch?v=6MgsHSAcI9k" target"_blank">Song5</a></b></li>
+						
+		</ul>		
+	</div>
 </body>
 
 </html>
