--- a/main.html
+++ b/main.html
@@ -21,6 +21,16 @@
 						
 		</ul>		
 	</div>
+	<h2>Now Playing</h2>
+	<div class="player_two">
+		<video controls>
+			<source src="https://www.w3schools.com/tags/movie.mp4" type="mp4"></source>
+		</video>
+	
+		<h2>MP3</h2>
+		<audio src="https://www.pagalworld.com.se/files/download/id/64630" type="mp3/ogg" controls></audio>
+		
+	</div>
 </body>
 
 </html>
